Fix dark mode mobile header: unify to off-white (#232328)

--- a/_sass/_refactor-styles.scss
+++ b/_sass/_refactor-styles.scss
@@ -954,6 +954,76 @@ p, ul, ol, blockquote {
   }
 }
 
+// Dark mode navbar styles for mobile (max-width: 991px)
+@media (max-width: 991px) {
+  body.dark-mode #mainNav {
+    background-color: #232328 !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
+
+    .navbar-collapse {
+      background-color: #232328 !important;
+    }
+
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          color: #f1f1f1 !important;
+          
+          &:hover,
+          &:focus {
+            color: #f1f1f1 !important;
+          }
+        }
+      }
+    }
+    
+    .navbar-brand {
+      color: #f1f1f1 !important;
+      
+      &:hover,
+      &:focus {
+        color: #f1f1f1 !important;
+      }
+    }
+    
+    .navbar-toggler {
+      color: #f1f1f1 !important;
+      border-color: rgba(255, 255, 255, 0.2) !important;
+      
+      .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28241, 241, 241, 0.85%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      }
+    }
+  }
+
+  body.dark-mode #mainNav.navbar-sticky {
+    background: #232328 !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
+    
+    .navbar-brand {
+      color: #f1f1f1 !important;
+      
+      &:hover,
+      &:focus {
+        color: #f1f1f1 !important;
+      }
+    }
+    
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          color: #f1f1f1 !important;
+          
+          &:hover,
+          &:focus {
+            color: #f1f1f1 !important;
+          }
+        }
+      }
+    }
+  }
+}
+
 // 3. Navbar Hover Effects
 .navbar-nav .nav-item .nav-link {
   position: relative;
